--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,7 @@ header {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    max-width: 1100px;
 }
 
 .text-dioses h3 {
@@ -443,8 +444,10 @@ header {
 
 .text-dioses p {
     font-weight: 300;
-    font-size: 23px;
+    font-size: 27px;
     color: rgba(255, 255, 255, 0.674);
+    text-align: justify;
+    line-height: 35px;
 }
 
 .border-text {
@@ -469,7 +472,7 @@ header {
     }
     
     .text-dioses p {
-        font-size: 20px;
+        font-size: 22px;
         text-align: justify;
     }
 
